--- a/index.html
+++ b/index.html
@@ -103,7 +103,20 @@
 						<i class="fas fa-link"></i>
 						</a>
 					</span>
-				</div>			
+				</div>	
+				<div class="main-timeline timeline block mb-4">
+					<div class='award-title'>Helped Microsoft secure a contract</div>
+					<span class='info-text smaller'>Implemented a prototype of an AI application</span>
+					<br>
+					<span>
+						<a class='icon-link' href='https://github.com/105306002/classicification' target="_blank">
+							<i class="fab fa-github" aria-hidden="true"></i>
+						</a>
+						<a class='icon-link' href='https://youtu.be/48xdzCHlytc' target="_blank">
+						<i class="fab fa-youtube"></i>
+						</a>
+					</span>
+				</div>
 			</article>
 
 			<!-- Experience -->
@@ -111,7 +124,7 @@
 				
 				<!-- Education -->
 				<header>
-					<h2>Education [<a class='icon-link' href="Chen_Ni_Lin_resume.pdf">Resume</a>]</h2>
+					<h2>Education [<a class='icon-link' href="Chen_Ni_Lin_resume.pdf" target="_blank">Resume</a>]</h2>
 				</header>
 				<div class="">
 			
@@ -295,58 +308,7 @@
 				<header>
 					<h2>Projects</h2>
 				</header>
-				<!-- <p>
-					I build exciting projects that solve real-world problems. <br>
-					Playground: Machine Learning, DApps, and Web Extensions. -->
-			  <!-- (Click the icons ↘) -->
-				<!-- </p> -->
-				<!-- <section class='proj-section'> -->
-					<!-- <div class="row proj-container template">
-						<div class="6u 12u$(mobile) proj-component">
-							<div class="img-box">
-								<div class="img-overlay">
-									<span class="img-mask">
-										<div>
-											<span class='proj-description'> </span>
-										</div>
-										<div class='flex-container proj-links'>
-											kk
-										</div>
-									</span>
-								</div>
-							</div>
-							<div>
-								<div class='img-box-footer proj-title'>
-									<a>ff</a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<div class="row proj-container-list template">
-						<h4 class="proj-category"></h4>
-						<div class="12u 0u$(mobile) proj-component-list">
-							<a class="img-box-small-container">
-								<div class="img-box-small">
-									aa
-								</div>
-							</a>
-							<div class="proj-description-container">
-								<div class="proj-description-text">
-									<div class="proj-list-title"> 
-										<span class="proj-list-name"> <a></a></span>
-
-										<div class="proj-list-links">
-											<img src="assets/icons/github-icon.png">
-											<img src="assets/icons/messenger-icon.png">
-											<img src="assets/icons/telegram-icon.png">
-										</div>
-									</div>
-									<div class="proj-list-description-info"> </div>
-								</div>
-							</div>
-						</div>
-					</div> -->
+				
 				<section>
 					<div class='award-title'>Data Science & Artificial Intelligence | Python, Pytorch, TensorFlow</div>
 					<span class='info-text smaller'>• Real time AI object detection and classicification</span>
