--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<article id="me2" class="test panel"> 
 				<header class="main-header">
 					<div class="flex-container" >   
-							<h1>Hi, my name is Chen-Ni Lin</h1>
+							<h1>Hi, I am Chen-Ni Lin</h1>
 							<br>				
 							<p>  	
 								<br>							
