--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
 						<i class="fas fa-link"></i>
 						</a>
 					</span>
+
 					<div class='award-title'>Leader @ Hult Prize 2017</div>
 					<span class='info-text smaller'>Won second place in Group Five</span>
 					<span>
@@ -226,6 +227,15 @@
 							<i class="fas fa-link"></i>
 						</a>
 					</span>
+
+					<div class='award-title'>Camp Counselor @ Nccumis Orientation Camp 2017</div>
+					<span class='info-text smaller'>Assisted each team member</span>
+					<span>
+						<a class='icon-link' href='https://www.facebook.com/hogwartsschoolofnccumis/photos/a.116735865661116/119592998708736/' target="_blank">
+							<i class="fas fa-link"></i>
+						</a>
+					</span>
+
 					<div class='award-title'>Pop Dance Club 2016</div>
 					<span class='info-text smaller'>Locking, Jazz and Hip-Hop</span>
 					<span>
