--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="description" content="Lethargic developer" />
 	<!-- Search Engine -->
 	<meta name="description" content="Lethargic developer">
-	<meta itemprop="name" content="Jennie Lin">
+	<meta itemprop="name" content="Chen-Ni Lin">
 	<meta itemprop="description" content="Lethargic developer">
 	<script src="assets/js/ie/html5shiv.js"></script>
 	<![endif]-->
