--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 				
 
 				<div class="main-timeline timeline block mb-4">
-					<div class='award-title'>Backend Study Group 2020 - May. 2021</div>
-					<span class='info-text smaller'>Me and my friends form a programming study group. We use our off-duty time to study new technologies, exchange and discuss with each other, and will invite experienced lecturers to share the industry experience with us.</span>
+					<div class='award-title'>Back-end Reading Club 2020 - May. 2021</div>
+					<span class='info-text smaller'>Formed a back-end reading club with several other students. I share technology once a month, and research topics like Redis and Ngnix in depth to find practical content.</span>
 					<br>
 					<span>
 						<a class='icon-link' href='https://github.com/kylemocode/BESG' target="_blank">
@@ -90,7 +90,7 @@
 				</div>	
 				<div class="main-timeline timeline block mb-4">
 					<div class='award-title'>Helped Microsoft secure a contract</div>
-					<span class='info-text smaller'>Implemented a prototype of an AI application</span>
+					<span class='info-text smaller'>Implemented an AI Object Detection and Classification application</span>
 					<br>
 					<span>
 						<a class='icon-link' href='https://github.com/105306002/classicification' target="_blank">
