--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 				<div class="main-timeline timeline block mb-4">
 					<div class='award-title'>Back-end Reading Club 2020 - May. 2021</div>
-					<span class='info-text smaller'>Formed a back-end reading club with several other students. I share technology once a month, and research topics like Redis and Ngnix in depth to find practical content.</span>
+					<span class='info-text smaller'>Formed a back-end reading club with several other students. We all love to study and research technologies.  I share technology once a month, and research topics like Redis and Ngnix in depth to find practical content.</span>
 					<br>
 					<span>
 						<a class='icon-link' href='https://github.com/kylemocode/BESG' target="_blank">
