--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						<div class="tl-item">
 							<div class="tl-dot"><a class="tl-author" href="#" data-abc="true"><span class="w-72 avatar circle gd-info"><img class="margin:auto; timeline-img w-50 " src="./images/Garena-icon.png" alt="."></span></a></div>
 							<div class="tl-content">
-								<div class='info-text'>Software Engineer | Back-end Engineer @ Garena </div> 
+								<div class='info-text'>Software Engineer | Backend Engineer @ Garena </div> 
 								<div class="text-normal">July 2020 - Sep. 2020</div>
 							</div>
 						</div>
@@ -186,8 +186,8 @@
 					<h2>Extracurricular Activity</h2>
 				</header>
 				<section>
-					<div class='award-title'>Backend Study Group 2020 - Present</div>
-					<span class='info-text smaller'>Me and my classmates form a study group</span>
+					<div class='award-title'>Back-end Reading Club 2020 - May. 2021</div>
+					<span class='info-text smaller'>Formed a back-end reading club with several other students</span>
 					<span>
 						<a class='icon-link' href='https://github.com/kylemocode/BESG' target="_blank">
 							<i class="fab fa-github"></i>
@@ -237,7 +237,7 @@
 					</span>
 
 					<div class='award-title'>Pop Dance Club 2016</div>
-					<span class='info-text smaller'>Locking, Jazz and Hip-Hop</span>
+					<span class='info-text smaller'>Locking, Waacking and Hip-Hop</span>
 					<span>
 						<a class='icon-link' href='https://youtu.be/fPqFtqENBuE' target="_blank">
 							<i class="fab fa-youtube"></i>
