--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 						</a>
 					</span>
 					<div class='award-title'>Data Structure & Programming | Java, Processing</div>
-					<span class='info-text smaller'>• Groundhog - a games using keyboard arrows</span>
+					<span class='info-text smaller'>• Groundhog - a game using keyboard arrows</span>
 					<span>
 						<a class='icon-link' href='https://github.com/105306002/HW6' target="_blank">
 							<i class="fab fa-github"></i>
