Fix classi words

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 				
 				<section>
 					<div class='award-title'>Data Science & Artificial Intelligence | Python, Pytorch, TensorFlow</div>
-					<span class='info-text smaller'>• Real time AI object detection and classicification</span>
+					<span class='info-text smaller'>• Real time AI object detection and classification</span>
 					<span>
 						<a class='icon-link' href='https://github.com/105306002/classicification' target="_blank">
 							<i class="fab fa-github" aria-hidden="true"></i>
