--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
 			
 					<div class="timeline block mb-4">
 						<div class="tl-item">
+							<div class="tl-dot"><a class="tl-author" href="#" data-abc="true"><span class="w-72 avatar circle gd-info"><img class="margin:auto;	timeline-img w-50" src="./images/asu-icon.png" alt="."></span></a></div>
+							<div class="tl-content">
+								<div class='info-text'>M.S. in Computer Science @ Arizona State University</div> 
+								<div class="text-normal">Aug. 2022 - Present</div>
+							</div>
+						</div>
+						<div class="tl-item">
 							<div class="tl-dot"><a class="tl-author" href="#" data-abc="true"><span class="w-72 avatar circle gd-info"><img class="margin:auto;	timeline-img w-50" src="./images/nccu-icon.png" alt="."></span></a></div>
 							<div class="tl-content">
 								<div class='info-text'>B.S. in Science @ National Chengchi University</div> 
