--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 				
 				<!-- Education -->
 				<header>
-					<h2>Education [<a class='icon-link' href="Chen_Ni_Lin_resume.pdf" target="_blank">Resume</a>]</h2>
+					<h2>Education [<a class='icon-link' href="resume.pdf" target="_blank">Resume</a>]</h2>
 				</header>
 				<div class="">
 			
@@ -117,7 +117,7 @@
 							<div class="tl-dot"><a class="tl-author" href="#" data-abc="true"><span class="w-72 avatar circle gd-info"><img class="margin:auto;	timeline-img w-50" src="./images/asu-icon.png" alt="."></span></a></div>
 							<div class="tl-content">
 								<div class='info-text'>M.S. in Computer Science @ Arizona State University</div> 
-								<div class="text-normal">Aug. 2022 - Present</div>
+								<div class="text-normal">Aug. 2022 - May 2024</div>
 							</div>
 						</div>
 						<div class="tl-item">
@@ -383,12 +383,12 @@
 					<div class="3u 12u$(mobile)">
 						<div class="center-row">
 							<div class="contact-icon-wrapper">
-								<a href="https://www.linkedin.com/in/chennilin/" target="_blank">
-									<img class="contact-icon" src="assets/icons/linkedin_circle_logo.png" />
+								<a href="https://www.linkedin.com/in/clin201/" target="_blank">
+									<img class="contact-icon" src="assets/icons/icons8-linkedin-480.png" />
 								</a>
 							</div>
 							<div>
-								<a href="https://www.linkedin.com/in/chennilin/" target="_blank">
+								<a href="https://www.linkedin.com/in/clin201/" target="_blank">
 									LinkedIn
 								</a>
 							</div>
@@ -398,7 +398,7 @@
 						<div class="center-row">
 							<div class="contact-icon-wrapper">
 								<a href="https://sssss71641303.medium.com/" target="_blank"> 
-									<img class="contact-icon" src="assets/icons/medium-icon.png" />
+									<img class="contact-icon" src="assets/icons/medium.png" />
 								</a>
 							</div>
 							<div>
@@ -411,13 +411,13 @@
 					<div class="3u 12u$(mobile)">
 						<div class="center-row">
 							<div class="contact-icon-wrapper">
-								<a href="https://twitter.com/ChenNiLin1" target="_blank"> 
-									<img class="contact-icon" src="assets/icons/twitter-icon.png" />
+								<a href="https://github.com/105306002" target="_blank"> 
+									<img class="contact-icon" src="assets/icons/github-logo.png" />
 								</a>
 							</div>
 							<div>
-								<a href="https://twitter.com/ChenNiLin1" target="_blank"> 
-									Twitter
+								<a href="https://github.com/105306002" target="_blank"> 
+									Github
 								</a>
 							</div>
 						</div>
