--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 				<div class="main-timeline timeline block mb-4">
 					<div class='award-title'>Back-end Reading Club 2020 - May. 2021</div>
-					<span class='info-text smaller'>Formed a back-end reading club with several other students. We all love to study and research technologies.  I share technology once a month, and research topics like Redis and Ngnix in depth to find practical content.</span>
+					<span class='info-text smaller'>Formed a back-end study group with several other students. We all love to study and research technologies.  I share technology once a month, and research topics like Redis and Ngnix in depth to find practical content.</span>
 					<br>
 					<span>
 						<a class='icon-link' href='https://github.com/kylemocode/BESG' target="_blank">
@@ -123,7 +123,7 @@
 						<div class="tl-item">
 							<div class="tl-dot"><a class="tl-author" href="#" data-abc="true"><span class="w-72 avatar circle gd-info"><img class="margin:auto;	timeline-img w-50" src="./images/nccu-icon.png" alt="."></span></a></div>
 							<div class="tl-content">
-								<div class='info-text'>B.S. in Science @ National Chengchi University</div> 
+								<div class='info-text'>B.S. of Science in Management Information System @ National Chengchi University</div> 
 								<div class="text-normal">Sep. 2016 - June 2020</div>
 							</div>
 						</div>
@@ -139,14 +139,14 @@
 						<div class="tl-item">
 							<div class="tl-dot"><a class="tl-author" href="#" data-abc="true"><span class="w-72 avatar circle gd-info"><img class="timeline-img w-50 margin:auto;" src="./images/OpenNet-icon.png" alt="."></span></a></div>
 							<div class="tl-content">
-								<div class='info-text'>Software Engineer @ OpenNet</div> 
+								<div class='info-text'>Software Developer Intern(Backend) @ OpenNet</div> 
 								<div class="text-normal">Nov. 2020 - Jan. 2021</div>
 							</div>
 						</div>
 						<div class="tl-item">
 							<div class="tl-dot"><a class="tl-author" href="#" data-abc="true"><span class="w-72 avatar circle gd-info"><img class="margin:auto; timeline-img w-50 " src="./images/Garena-icon.png" alt="."></span></a></div>
 							<div class="tl-content">
-								<div class='info-text'>Software Engineer | Backend Engineer @ Garena </div> 
+								<div class='info-text'>Software Engineer Intern(Backend) @ Garena </div> 
 								<div class="text-normal">July 2020 - Sep. 2020</div>
 							</div>
 						</div>
@@ -155,7 +155,7 @@
 							<div class="tl-content">
 								<div class='info-text'>Software Engineer Intern @ Microsoft | Apps Domain</div> 
 								<div class="text-normal">July 2019 - Jan. 2020</div>
-								<div class="text-muted">Implemented the prototype for different fields</div>
+								<div class="text-muted">Implemented the prototype for different fields based on customer needs</div>
 							</div>
 						</div>
 						<div class="tl-item">
@@ -163,7 +163,7 @@
 							<div class="tl-content">
 								<div class='info-text'>Software Engineer Intern @ Microsoft | Consultant Service</div> 
 								<div class="text-normal">July 2018 - June 2019</div>
-								<div class="text-muted">Worked on large scale system for hospital</div>
+								<div class="text-muted">Worked on large scale hospital system </div>
 							</div>
 						</div>
 				</div>
